// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Kusama Coretime Multisig Proxy > failure tests > 2-of-3 multisig as standard proxy (non-transfer) > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "D8ew585BL5H1ALhn4kmJoxhgqcgKDZLPc6xunJNv4mmrBns",
      "callHash": "(hash)",
      "multisig": "DmDBuaenD2WM54PYRMHqQbCTKd1HnXi6AeHHyeiFU6cosXp",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`Kusama Coretime Multisig Proxy > failure tests > 2-of-3 multisig as standard proxy (non-transfer) > events when Bob approves multisig call 1`] = `
[
  {
    "data": {
      "approving": "EvvS4HELEC1nxVHsjYUsPvypd2kXeu78AguyiSN7kV2pTnk",
      "callHash": "(hash)",
      "multisig": "DmDBuaenD2WM54PYRMHqQbCTKd1HnXi6AeHHyeiFU6cosXp",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`Kusama Coretime Multisig Proxy > success tests > 2-of-3 multisig as standard proxy (any) > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "D8ew585BL5H1ALhn4kmJoxhgqcgKDZLPc6xunJNv4mmrBns",
      "callHash": "(hash)",
      "multisig": "DmDBuaenD2WM54PYRMHqQbCTKd1HnXi6AeHHyeiFU6cosXp",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`Kusama Coretime Multisig Proxy > success tests > 2-of-3 multisig as standard proxy (any) > events when Bob approves multisig call 1`] = `
[
  {
    "data": {
      "approving": "EvvS4HELEC1nxVHsjYUsPvypd2kXeu78AguyiSN7kV2pTnk",
      "callHash": "(hash)",
      "multisig": "DmDBuaenD2WM54PYRMHqQbCTKd1HnXi6AeHHyeiFU6cosXp",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`Kusama Coretime Multisig Proxy > success tests > 2-of-3 multisig as standard proxy with announcement and rejection > events when Bob approves multisig call 1`] = `
[
  {
    "data": {
      "approving": "EvvS4HELEC1nxVHsjYUsPvypd2kXeu78AguyiSN7kV2pTnk",
      "callHash": "(hash)",
      "multisig": "DmDBuaenD2WM54PYRMHqQbCTKd1HnXi6AeHHyeiFU6cosXp",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`Kusama Coretime Multisig Proxy > success tests > 2-of-3 multisig as standard proxy with announcement and rejection > events when Dave rejects the announced call 1`] = `[]`;

exports[`Kusama Coretime Multisig Proxy > success tests > 2-of-3 multisig with pure proxy (any) > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "D8ew585BL5H1ALhn4kmJoxhgqcgKDZLPc6xunJNv4mmrBns",
      "callHash": "(hash)",
      "multisig": "Ep3vVfKCxtCMQTUpkDUwYoogkTsKdo2stNF2fK9hYKyYczp",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`Kusama Coretime Multisig Proxy > success tests > 2-of-3 multisig with pure proxy (any) > events when Bob's proxy approves the multisig call 1`] = `
[
  {
    "data": {
      "approving": "CoS73aLeviUkoSp3Uwnrtzg8iCVD9cK5xFW4TudfkqAcZY7",
      "callHash": "(hash)",
      "multisig": "Ep3vVfKCxtCMQTUpkDUwYoogkTsKdo2stNF2fK9hYKyYczp",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`Kusama Coretime Multisig Proxy > success tests > 2-of-3 multisig with pure proxy (non-transfer) > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "D8ew585BL5H1ALhn4kmJoxhgqcgKDZLPc6xunJNv4mmrBns",
      "callHash": "(hash)",
      "multisig": "GXLmpmrhd8ZHTPCUVVSf5mqbXY52R8QNDyj5KLtBfkUiFZc",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`Kusama Coretime Multisig Proxy > success tests > 2-of-3 multisig with pure proxy (non-transfer) > events when Bob's proxy approves the multisig call 1`] = `
[
  {
    "data": {
      "approving": "Dv1euBcYSm1JhmpSQge3bVSPWpB5Wu24uR9pFLYMtE9KDgy",
      "callHash": "(hash)",
      "multisig": "GXLmpmrhd8ZHTPCUVVSf5mqbXY52R8QNDyj5KLtBfkUiFZc",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`Kusama Coretime Multisig Proxy > success tests > 2-of-3 multisig with pure proxy multisig > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "D8ew585BL5H1ALhn4kmJoxhgqcgKDZLPc6xunJNv4mmrBns",
      "callHash": "(hash)",
      "multisig": "CtVtFQbcUvTfEHHXwh77GpAHQuMV4HJM2da3rrhrtuMDcCD",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`Kusama Coretime Multisig Proxy > success tests > Cancel 2-of-3 multisig with pure proxy before any other approvals > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "H9BHyk4yd571jMmBJDT2YnDWyQHkqQS3x41nNiBj7mgbCXU",
      "callHash": "(hash)",
      "multisig": "EDSL14DF3hTVTTzLf68puAp5CjuhBxaqTyUkmAWomHbiR8R",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;
